--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "frontity"
   ],
   "engines": {
-    "node": ">=10.0.0",
+    "node": "16.13.0",
     "npm": ">=6.0.0"
   },
   "scripts": {
@@ -17,11 +17,14 @@
   },
   "prettier": {},
   "dependencies": {
-    "frontity": "^1.17.2",
     "@frontity/core": "^1.16.0",
-    "@frontity/wp-source": "^1.11.7",
-    "@frontity/tiny-router": "^1.4.4",
     "@frontity/html2react": "^1.7.0",
-    "@frontity/mars-theme": "./packages/mars-theme"
+    "@frontity/mars-theme": "./packages/mars-theme",
+    "@frontity/tiny-router": "^1.4.4",
+    "@frontity/wp-source": "^1.11.7",
+    "classicjerusalem": "file:packages/classicjerusalem",
+    "frontity": "^1.17.2",
+    "react-icons": "^4.7.1",
+    "react-image-gallery": "^1.2.11"
   }
 }
